Data Loader (#29)
* ✨ feat(data): Implement dynamic JSON data loading for recipes and Baubles slots

* sa

* remove test

* fix ok-guide server

* fix ok-guide server

* sa

* fix import

* fix ok-guide server

* ♻️ refactor(baubles): Simplify slot management and adjust init timing

* ♻️ refactor(data-loading): Migrate JSON readers to process input streams directly